--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -11,7 +11,7 @@ on:
         required: false
 
 permissions:
-  contents: write
+  contents: read
   packages: write
 
 jobs:
@@ -29,20 +29,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            linzeliang1222/wallos
-            ghcr.io/${{ github.repository }}
+          images: linzeliang1222/wallos
 
       # necessary for multi-platform images
       - name: Set up QEMU
